# cubic_rubic

./: .gitignore  Cargo.toml
src/: main.rs  state.rs
