[package]
name = "cubic_rubic"
version = "0.1.0"
authors = ["Alexander Tokarev <Alexander.Tokarev@leroymerlin.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.12.0"

[dev-dependencies]
rand = "0.7.3"